8236732: Shenandoah: Stricter placement for oom-evac scopes

Reviewed-by: zgu