src/hotspot/share/gc/shenandoah/shenandoahNMethod.cpp
@@ -174,6 +174,7 @@ void ShenandoahNMethod::heal_nmethod(nmethod* nm) {
   assert(data != NULL, "Sanity");
   assert(data->lock()->owned_by_self(), "Must hold the lock");
 
+  ShenandoahEvacOOMScope evac_scope;
   ShenandoahEvacuateUpdateRootsClosure cl;
   data->oops_do(&cl, true /*fix relocation*/);
 }
